--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,8 @@
     "clear": "docusaurus clear",
     "start": "docusaurus start",
     "swizzle": "docusaurus swizzle",
-    "build": "docusaurus build",
+    "prebuild": "docusaurus gen-api-docs all",
+    "build": "npm run prebuild && docusaurus build",
     "publish-gh-pages": "docusaurus deploy",
     "format": "npx prettier --write \"src/**/*.{js,jsx,ts,tsx,md,mdx,json,css,scss}\""
   },
@@ -15,7 +16,9 @@
     "@docusaurus/preset-classic": "^3.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.0.0",
+    "docusaurus-plugin-openapi-docs": "^4.5.1",
     "docusaurus-plugin-sass": "^0.2.6",
+    "docusaurus-theme-openapi-docs": "^4.5.1",
     "lodash": "^4.17.21",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
